--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -6,11 +6,12 @@
     tools:context=".ui.fragment.UserFragment">
 
 
-    <TextView
-        android:id="@+id/tv_user"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="user fragment" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_show_dialog"
+        android:layout_width="match_parent"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="@dimen/len_10"
+        android:text="显示弹窗"
+        android:layout_height="wrap_content"/>
 </FrameLayout>
