消除硬编码代码

--- a/app/src/main/res/layout/item_drop_down_menu_layout.xml
+++ b/app/src/main/res/layout/item_drop_down_menu_layout.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:paddingLeft="@dimen/len_10"
-        android:text="测试"
+        android:paddingRight="@dimen/len_10"
         android:textColor="@color/primary_text" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
