--- a/app/src/main/res/menu/activity_task.xml
+++ b/app/src/main/res/menu/activity_task.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
 
-        android:title="item1"
+        android:title="@string/add"
         app:showAsAction="never" />
     <item
 
-        android:title="item2"
+        android:title="@string/cancel"
         app:showAsAction="never" />
     <item
 
-        android:title="item3"
+        android:title="@string/sure_update"
         app:showAsAction="never" />
     <item
 
-        android:title="item4"
+        android:title="@string/start_location"
         app:showAsAction="never" />
 
 </menu>
