--- a/gao_de_map/src/main/res/layout/activity_gao_de.xml
+++ b/gao_de_map/src/main/res/layout/activity_gao_de.xml
@@ -16,14 +16,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/len_10"
-        android:text="开始定位" />
+        android:text="@string/start_location" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_location_result"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:hint="定位结果" />
+        android:gravity="center" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
