1.删除无用v21资源文件 2.优化StateView代码，使用高阶函数代替接口回调，代码更简洁

--- a/lib_resource/src/main/res/drawable/ic_camera.xml
+++ b/lib_resource/src/main/res/drawable/ic_camera.xml
@@ -1,8 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportHeight="1024"
-    android:viewportWidth="1024">
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
     <path
         android:fillColor="#9e9e9e"
         android:pathData="M878.91,237.41h-71.01c-28.41,0 -71.01,-21.3 -87.58,-40.24l-47.34,-54.44c-26.04,-28.41 -59.18,-44.98 -97.05,-44.98h-127.83c-42.61,0 -71.01,14.2 -101.79,47.34l-47.34,54.44c-14.2,16.57 -56.81,37.87 -85.22,37.87h-68.65c-47.34,0 -87.58,35.51 -87.58,80.48v511.31c0,42.61 35.51,78.12 80.48,80.48h738.55c47.34,0 87.58,-37.87 87.58,-80.48L964.13,317.89c0,-44.98 -37.87,-80.48 -85.22,-80.48zM916.78,831.57c0,18.94 -16.57,33.14 -40.24,33.14L140.36,864.71c-21.3,0 -35.51,-16.57 -35.51,-33.14L104.85,317.89c0,-18.94 16.57,-33.14 40.24,-33.14h68.65c44.98,0 99.42,-28.41 120.72,-54.44l47.34,-54.44c21.3,-23.67 37.87,-30.77 66.28,-30.77h127.83c23.67,0 44.98,9.47 61.55,28.41l47.34,54.44c23.67,26.04 78.12,54.44 123.09,54.44h71.01c21.3,0 40.24,14.2 40.24,33.14v516.04z" />
