--- a/lib_resource/src/main/res/drawable/ic_pwd.xml
+++ b/lib_resource/src/main/res/drawable/ic_pwd.xml
@@ -1,8 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportHeight="1024.0"
-    android:viewportWidth="1024.0">
+    android:viewportWidth="1024.0"
+    android:viewportHeight="1024.0">
     <path
         android:fillColor="@color/white"
         android:pathData="M734.8,342.3l-4.6,0 0,-58.1c0,-121.3 -98.7,-220 -220,-220 -121.4,0 -220.1,98.7 -220.1,220l0,58.1 -4.6,0c-47.4,0 -86,38.6 -86,86l0,348.6c0,47.4 38.6,86 86,86l449.3,0c47.4,0 86,-38.6 86,-86L820.7,428.2C820.7,380.8 782.2,342.3 734.8,342.3zM348,284.1c0,-89.4 72.8,-162.2 162.2,-162.2 89.4,0 162.2,72.7 162.2,162.2l0,58.1L348,342.3 348,284.1zM762.9,776.9c0,15.5 -12.6,28.1 -28.1,28.1L285.5,804.9c-15.5,0 -28.1,-12.6 -28.1,-28.1L257.4,428.2c0,-15.5 12.6,-28.1 28.1,-28.1l449.3,0c15.5,0 28.1,12.6 28.1,28.1L762.9,776.9z" />
