--- a/lib_resource/src/main/res/drawable/ic_arrow_right.xml
+++ b/lib_resource/src/main/res/drawable/ic_arrow_right.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="1024"
-    android:viewportWidth="1024" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#cdcdcd" android:pathData="M352.19,96.2l415.63,415.8 -415.63,415.8 -63.44,-63.62 352.02,-352.21 -352.02,-352.1z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+    <path
+        android:fillColor="#cdcdcd"
+        android:pathData="M352.19,96.2l415.63,415.8 -415.63,415.8 -63.44,-63.62 352.02,-352.21 -352.02,-352.1z" />
 </vector>
