StateView新增 无数据、无网络、错误时的显示图片自定义属性

--- a/app/src/main/res/layout/activity_coroutines.xml
+++ b/app/src/main/res/layout/activity_coroutines.xml
@@ -22,6 +22,7 @@
 
     <com.yzq.lib_widget.StateView
         android:id="@+id/state_view"
+        app:no_net_img_res="@drawable/ic_launcher"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
