--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.fragment.UserFragment">
-
 
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_show_dialog"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_margin="@dimen/len_10"
-        android:text="显示弹窗"
-        android:layout_height="wrap_content"/>
-</FrameLayout>
+        android:text="显示弹窗" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_select_img"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="@dimen/len_10"
+        android:text="选图片" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_permission"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="@dimen/len_10"
+        android:text="申请权限" />
+
+
+</androidx.appcompat.widget.LinearLayoutCompat>
