--- a/lib_resource/src/main/res/drawable/item_divider.xml
+++ b/lib_resource/src/main/res/drawable/item_divider.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/divider" />
+    <solid android:color="@color/black_alpha_16" />
     <size android:height="1dp" />
 </shape>
