--- a/lib_resource/src/main/res/values/style.xml
+++ b/lib_resource/src/main/res/values/style.xml
@@ -10,8 +10,8 @@
         <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="android:textColorSecondary">@color/secondary_text</item>
         <item name="android:icon">@color/icons</item>
-        <item name="android:divider">@color/divider</item>
-        <item name="colorControlHighlight">@color/wave_color</item>
+        <item name="android:divider">@color/black_alpha_16</item>
+        <item name="colorControlHighlight">@color/black_alpha_16</item>
         <item name="android:textSize">@dimen/font_14</item>
         <item name="android:windowBackground">@color/bg_gray</item>
         <item name="android:screenOrientation">portrait</item>
