--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,11 +18,12 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_account"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:layout_margin="@dimen/len_10">
+        android:layout_margin="@dimen/len_10"
+        app:endIconMode="clear_text">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_account"
@@ -35,12 +36,12 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-
+        android:id="@+id/input_layout_pwd"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/len_10"
-        app:passwordToggleEnabled="true">
+        app:endIconMode="password_toggle">
 
 
         <com.google.android.material.textfield.TextInputEditText
