--- a/lib_widget/src/main/res/layout/view_horizontal_text_layout.xml
+++ b/lib_widget/src/main/res/layout/view_horizontal_text_layout.xml
@@ -2,19 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/len_48"
     android:background="@drawable/list_item_selector"
-    android:minHeight="@dimen/len_48"
-    android:padding="@dimen/len_10">
+    android:paddingStart="@dimen/len_10"
+    android:paddingEnd="@dimen/len_10">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icon_start"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/len_20"
         android:layout_height="@dimen/len_20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/colorAccent" />
+        app:srcCompat="@drawable/ic_pwd"
+        app:tint="@color/primary_icon" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -22,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginStart="@dimen/len_10"
+        android:gravity="center_vertical"
         android:minWidth="@dimen/len_100"
         android:textColor="@color/primary_text"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,7 +36,7 @@
         android:id="@+id/tv_content"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:gravity="end"
+        android:gravity="end|center_vertical"
         android:paddingStart="@dimen/len_10"
         android:paddingEnd="@dimen/len_0"
         android:textColor="@color/secondary_text"
@@ -45,14 +47,15 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icon_end"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/len_20"
+        android:layout_width="@dimen/len_24"
+        android:layout_height="wrap_content"
         android:paddingStart="@dimen/len_10"
         android:paddingEnd="@dimen/len_0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/icons" />
+        app:srcCompat="@drawable/ic_arrow_right"
+        app:tint="@color/secondary_icon" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
