--- a/app/src/main/res/layout/fragment_pager_content.xml
+++ b/app/src/main/res/layout/fragment_pager_content.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.fragment.PagerContentFragment">
+
+    <com.yzq.kotlincommon.widget.banner.CustomBannerViewPager
+        android:id="@+id/banner_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/len_128"
+        app:bvp_indicator_checked_color="@color/white"
+        app:bvp_indicator_normal_color="@color/gray_500"
+        app:bvp_page_margin="@dimen/len_10"
+        app:bvp_page_style="multi_page" />
 
 
     <TextView
         android:id="@+id/tv_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/len_60"
         android:gravity="center"
         android:text="content"
         android:textColor="@color/black"
         android:textSize="@dimen/font_20" />
 
-</FrameLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
