--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -13,7 +13,7 @@
         android:id="@+id/btn_download"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/len_16"
+        android:layout_margin="@dimen/dp_16"
         android:text="@string/download" />
 
 
@@ -22,7 +22,7 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/len_16"
+        android:layout_margin="@dimen/dp_16"
         android:max="100"
         android:min="0" />
 
