--- a/app/src/main/res/layout/item_tag_layout.xml
+++ b/app/src/main/res/layout/item_tag_layout.xml
@@ -3,14 +3,14 @@
     android:id="@+id/tv_tag_name"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/len_6"
-    android:layout_marginTop="@dimen/len_6"
+    android:layout_marginStart="@dimen/dp_6"
+    android:layout_marginTop="@dimen/dp_6"
     android:background="@drawable/tag_bg"
     android:gravity="center"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/len_8"
-    android:paddingTop="@dimen/len_2"
-    android:paddingRight="@dimen/len_8"
-    android:paddingBottom="@dimen/len_2"
+    android:paddingLeft="@dimen/dp_8"
+    android:paddingTop="@dimen/dp_2"
+    android:paddingRight="@dimen/dp_8"
+    android:paddingBottom="@dimen/dp_2"
     android:textColor="@color/colorPrimary" />
 
