--- a/gao_de_map/src/main/res/layout/activity_gao_de.xml
+++ b/gao_de_map/src/main/res/layout/activity_gao_de.xml
@@ -15,7 +15,7 @@
         style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/len_10"
+        android:layout_margin="@dimen/dp_10"
         android:text="@string/start_location" />
 
 
