--- a/lib_base_adapter/src/main/res/layout/layout_load_more.xml
+++ b/lib_base_adapter/src/main/res/layout/layout_load_more.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/len_36"
+    android:layout_height="@dimen/dp_36"
     android:background="@color/white"
 
     android:orientation="horizontal">
@@ -15,13 +15,13 @@
 
 
         <ProgressBar
-            android:layout_width="@dimen/len_16"
+            android:layout_width="@dimen/dp_16"
             android:layout_height="match_parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/len_4"
+            android:layout_marginStart="@dimen/dp_4"
             android:gravity="center"
             android:text="@string/loadding"
             android:textColor="@color/secondary_text" />
