--- a/app/src/main/res/layout/drop_down_menu_content.xml
+++ b/app/src/main/res/layout/drop_down_menu_content.xml
@@ -13,6 +13,6 @@
         android:gravity="center"
         android:text="筛选条件"
         android:textColor="@color/black"
-        android:textSize="@dimen/font_18" />
+        android:textSize="@dimen/sp_18" />
 
 </LinearLayout>
