--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -16,7 +16,7 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/len_1"
+        android:layout_marginTop="@dimen/dp_1"
         android:background="@color/white" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
