--- a/app/src/main/res/layout/fragment_view_pager_with.xml
+++ b/app/src/main/res/layout/fragment_view_pager_with.xml
@@ -14,14 +14,14 @@
         android:layout_height="wrap_content"
         app:tabIndicator="@drawable/tab_in"
         app:tabIndicatorFullWidth="false"
-        app:tabIndicatorHeight="@dimen/len_4"
+        app:tabIndicatorHeight="@dimen/dp_4"
         app:tabMode="scrollable" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/len_1"
+        android:layout_marginTop="@dimen/dp_1"
         android:background="@color/white" />
 
 
