--- a/app/src/main/res/layout/item_delete_menu.xml
+++ b/app/src/main/res/layout/item_delete_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tv_delete"
-    android:layout_width="@dimen/len_68"
+    android:layout_width="@dimen/dp_68"
     android:layout_height="match_parent"
     android:background="@color/red_500"
     android:gravity="center"
