--- a/app/src/main/res/layout/item_drop_down_menu_layout.xml
+++ b/app/src/main/res/layout/item_drop_down_menu_layout.xml
@@ -4,15 +4,15 @@
     android:layout_height="wrap_content"
     android:background="@drawable/list_item_selector"
     android:orientation="horizontal"
-    android:padding="@dimen/len_10">
+    android:padding="@dimen/dp_10">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:paddingLeft="@dimen/len_10"
-        android:paddingRight="@dimen/len_10"
+        android:paddingLeft="@dimen/dp_10"
+        android:paddingRight="@dimen/dp_10"
         android:textColor="@color/primary_text" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
