--- a/app/src/main/res/layout/item_main_layout.xml
+++ b/app/src/main/res/layout/item_main_layout.xml
@@ -3,4 +3,4 @@
 <com.yzq.lib_widget.HorizontalTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mainItem"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/len_48" />
+    android:layout_height="@dimen/dp_48" />
