--- a/lib_materialdialog/src/main/res/layout/loading_dialog_layout.xml
+++ b/lib_materialdialog/src/main/res/layout/loading_dialog_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="horizontal"
-    android:padding="@dimen/len_10">
+    android:padding="@dimen/dp_10">
 
     <ProgressBar
         android:id="@+id/loadding_progress"
@@ -18,9 +18,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
-        android:paddingStart="@dimen/len_10"
-        android:paddingEnd="@dimen/len_0"
+        android:paddingStart="@dimen/dp_10"
+        android:paddingEnd="@dimen/dp_0"
         android:textColor="?android:textColorSecondary"
-        android:textSize="@dimen/font_16" />
+        android:textSize="@dimen/sp_16" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
