--- a/lib_materialdialog/src/main/res/layout/progress_dialog_layout.xml
+++ b/lib_materialdialog/src/main/res/layout/progress_dialog_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/len_10">
+    android:padding="@dimen/dp_10">
 
     <androidx.core.widget.ContentLoadingProgressBar
         android:id="@+id/progress_horizontal"
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:text="@string/zero"
             android:textColor="?android:textColorSecondary"
-            android:textSize="@dimen/font_16"
+            android:textSize="@dimen/sp_16"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:text="@string/hundred"
             android:textColor="?android:textColorSecondary"
-            android:textSize="@dimen/font_16"
+            android:textSize="@dimen/sp_16"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
