--- a/lib_resource/src/main/res/values/style.xml
+++ b/lib_resource/src/main/res/values/style.xml
@@ -12,7 +12,7 @@
         <item name="android:icon">@color/icons</item>
         <item name="android:divider">@color/black_alpha_16</item>
         <item name="colorControlHighlight">@color/black_alpha_16</item>
-        <item name="android:textSize">@dimen/font_14</item>
+        <item name="android:textSize">@dimen/sp_14</item>
         <item name="android:windowBackground">@color/bg_gray</item>
         <item name="android:screenOrientation">portrait</item>
         <item name="android:configChanges">screenSize|keyboardHidden|orientation</item>
@@ -21,9 +21,7 @@
         <item name="windowNoTitle">true</item>
 
 
-
     </style>
-
 
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
@@ -45,7 +43,7 @@
     <style name="OverflowMenuStyle" parent="Widget.AppCompat.Light.PopupMenu.Overflow">
         <item name="overlapAnchor">false</item>
         <item name="android:background">@color/white</item>
-        <item name="android:dropDownVerticalOffset">@dimen/len_2</item>
+        <item name="android:dropDownVerticalOffset">@dimen/dp_2</item>
 
     </style>
 
