--- a/lib_widget/src/main/res/layout/view_horizontal_text_layout.xml
+++ b/lib_widget/src/main/res/layout/view_horizontal_text_layout.xml
@@ -2,15 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/len_48"
+    android:layout_height="@dimen/dp_48"
     android:background="@drawable/list_item_selector"
-    android:paddingStart="@dimen/len_10"
-    android:paddingEnd="@dimen/len_10">
+    android:paddingStart="@dimen/dp_10"
+    android:paddingEnd="@dimen/dp_10">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icon_start"
-        android:layout_width="@dimen/len_20"
-        android:layout_height="@dimen/len_20"
+        android:layout_width="@dimen/dp_20"
+        android:layout_height="@dimen/dp_20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,14 +22,14 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/len_10"
+        android:layout_marginStart="@dimen/dp_10"
         android:gravity="center_vertical"
-        android:minWidth="@dimen/len_100"
+        android:minWidth="@dimen/dp_100"
         android:textColor="@color/primary_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/icon_start"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_goneMarginLeft="@dimen/len_0" />
+        app:layout_goneMarginLeft="@dimen/dp_0" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -37,8 +37,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:gravity="end|center_vertical"
-        android:paddingStart="@dimen/len_10"
-        android:paddingEnd="@dimen/len_0"
+        android:paddingStart="@dimen/dp_10"
+        android:paddingEnd="@dimen/dp_0"
         android:textColor="@color/secondary_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/icon_end"
@@ -47,10 +47,10 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icon_end"
-        android:layout_width="@dimen/len_24"
+        android:layout_width="@dimen/dp_24"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/len_10"
-        android:paddingEnd="@dimen/len_0"
+        android:paddingStart="@dimen/dp_10"
+        android:paddingEnd="@dimen/dp_0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
