--- a/app/src/main/res/layout/item_banner.xml
+++ b/app/src/main/res/layout/item_banner.xml
@@ -4,6 +4,8 @@
     android:id="@+id/iv_banner"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginStart="@dimen/dp_10"
+    android:layout_marginEnd="@dimen/dp_10"
     android:scaleType="centerCrop"
     app:cornerRadius="@dimen/dp_10"
     app:roundedCorners="all" />
