更新sdk版本  完善代码命名

--- a/app/src/main/res/layout/dialog_scroll_layout.xml
+++ b/app/src/main/res/layout/dialog_scroll_layout.xml
@@ -53,7 +53,7 @@
         android:text="输入" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_loadding"
+        android:id="@+id/btn_loading"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
