--- a/lib_materialdialog/src/main/res/layout/loading_dialog_layout.xml
+++ b/lib_materialdialog/src/main/res/layout/loading_dialog_layout.xml
@@ -6,13 +6,13 @@
     android:padding="@dimen/dp_10">
 
     <ProgressBar
-        android:id="@+id/loadding_progress"
+        android:id="@+id/loading_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/loadding_message_tv"
+        android:id="@+id/loading_message_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
