--- a/lib_widget/src/main/res/layout/layout_state_view.xml
+++ b/lib_widget/src/main/res/layout/layout_state_view.xml
@@ -5,7 +5,7 @@
 
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/loadding_layout"
+        android:id="@+id/loading_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -21,7 +21,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
             android:gravity="center"
-            android:text="@string/loadding" />
+            android:text="@string/loading" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
