--- a/app/src/main/res/layout/activity_data_binding.xml
+++ b/app/src/main/res/layout/activity_data_binding.xml
@@ -28,23 +28,11 @@
 
 
         <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/et_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_10"
             android:text="@={data.content}" />
-
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_reset"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="重置" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_get_data"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="获取当前值" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
